--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="loginout">#FF0000</color>
     <color name="white">#FFFFFF</color>
     <color name="sign_text">#6B8E23</color>
+    <color name="black">#ff000000</color>
+    <color name="theme_bg_color">#fff8f7f5</color>
 </resources>
