--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_size_12">12.0sp</dimen>
+
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <!-- video -->
+    <dimen name="library_video_video_margin_top">0dp</dimen>
+    <dimen name="library_video_controlbar_height">36dp</dimen>
+    <dimen name="titlebar_height">50dp</dimen>
 </resources>
