--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,18 @@
         <item name="android:windowExitAnimation">@anim/out</item>
     </style>
 
+    <style name="LibraryVideoMediaControllerSeekBar" parent="android:Widget.SeekBar">
+        <item name="android:progressDrawable">@drawable/library_video_layer_sbar_bg</item>
+        <item name="android:minHeight">1dp</item>
+        <item name="android:maxHeight">1dp</item>
+        <item name="android:thumb">@drawable/library_video_selector_sbar_thumb</item>
+    </style>
+
+    <!-- video -->
+    <style name="MediaController_Text">
+        <item name="android:textColor">#ffffffff</item>
+        <item name="android:textSize">11sp</item>
+    </style>
+    <style name="VideoStyle" parent="android:Theme.Light.NoTitleBar"></style>
+
 </resources>
