--- a/app/src/main/res/layout/forgetpassword_layout.xml
+++ b/app/src/main/res/layout/forgetpassword_layout.xml
@@ -23,16 +23,18 @@
         android:layout_marginTop="160dp"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:text="原用户名:"
             android:textColor="@color/white"
             android:textSize="15sp"/>
         <EditText
             android:id="@+id/alter_userid"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:layout_gravity="center_vertical"
             android:textColor="@color/white"
             android:theme="@style/MyEditText"
@@ -47,16 +49,18 @@
         android:layout_marginRight="15dp"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:textColor="@color/white"
             android:text="原姓名："
             android:textSize="15sp"/>
         <EditText
             android:id="@+id/alter_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:layout_gravity="center_vertical"
             android:textColor="@color/white"
             android:theme="@style/MyEditText"
@@ -71,16 +75,46 @@
         android:layout_marginRight="15dp"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
+            android:text="证件："
+            android:textSize="15sp"/>
+        <EditText
+            android:id="@+id/alter_idcard"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
+            android:hint="身份证后六位"
+            android:textColorHint="#FFFFFF"
+            android:theme="@style/MyEditText"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:textColor="@color/white"
             android:text="新密码："
             android:textSize="15sp"/>
         <EditText
             android:id="@+id/alter_pw"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:layout_gravity="center_vertical"
             android:textColor="@color/white"
             android:theme="@style/MyEditText"
