--- a/app/src/main/res/layout/video_details.xml
+++ b/app/src/main/res/layout/video_details.xml
@@ -4,15 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    <include
+        android:id="@+id/top"
+        layout="@layout/topper" />
     <TextView
         android:id="@+id/statusbar_bg_layout"
         android:layout_width="match_parent"
+        android:layout_below="@+id/top"
         android:layout_height="20dp"
-        android:layout_alignParentTop="true" >
+         >
     </TextView>
     <LinearLayout
         android:id="@+id/video_layout"
         android:layout_width="match_parent"
+        android:layout_below="@+id/top"
         android:layout_height="200dp">
         <cn.jzvd.JZVideoPlayerStandard
             android:id="@+id/jc_player"
@@ -139,25 +144,61 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textSize="25dp"
-                android:text="邢彦纳傻逼"
-                android:id="@+id/video_details_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/video_details_d"
-                android:layout_marginLeft="10dp"
-                android:textSize="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="25dp"
+                    android:text="邢彦纳傻逼"
+                    android:id="@+id/video_details_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/video_details_d"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:layout_marginLeft="110dp"
+                android:text="分享"/>
+
+            <LinearLayout
+                android:id="@+id/layout_praise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center">
+                <ImageView
+                    android:id="@+id/iv_praise"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/common_praise3x_nor"/>
+                <TextView
+                    android:id="@+id/tv_praise"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="赞"/>
+            </LinearLayout>
         </LinearLayout>
+
+
+
         <TextView
             android:layout_margin="10dp"
             android:layout_width="wrap_content"
@@ -165,6 +206,7 @@
             android:layout_marginTop="10dp"
             android:text="简介："
             android:textSize="18dp" />
+
 
         <TextView
             android:layout_marginLeft="5dp"
@@ -182,9 +224,49 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ListView
-            android:id="@+id/video_comment"
+            android:id="@+id/lv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="5dp"
+            android:listSelector="@android:color/transparent"  >
         </ListView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/common_bg"
+        android:id="@+id/commentLinear"
+        android:visibility="gone"
+        android:orientation="horizontal">
+        <!-- 输入框 -->
+        <EditText
+            android:id="@+id/commentEdit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:maxLength="100"
+            android:minHeight="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:inputType="textMultiLine"
+            android:gravity="center_vertical"
+            android:maxLines="6"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical" />
+        <!-- 留言按钮 -->
+        <Button
+            android:id="@+id/commentButton"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:textColor="#FFFFFF"
+            android:text="发表"
+            android:layout_marginRight="5dp"
+            android:background="@color/ssf_main_color"
+            android:layout_gravity="center_vertical"/>
     </LinearLayout>
 </RelativeLayout>
